tests/javacresults/op_track.txt
Intermediate.java:34: error: no suitable constructor found for Track(Track)
t2 = new Track(t);
     ^
    constructor Track.Track() is not applicable
      (actual and formal argument lists differ in length)
    constructor Track.Track(Chord[]) is not applicable
      (actual argument Track cannot be converted to Chord[] by method invocation conversion)
Intermediate.java:36: error: array required, but Track found
System.out.println(t[1].toString());
                    ^
2 errors
